[gd_scene load_steps=18 format=3 uid="uid://dy2bt83ufvtwp"]

[ext_resource type="Shader" path="res://resources/shaders/blur_menu.gdshader" id="1_fnc0l"]
[ext_resource type="Script" path="res://resources/menus/pause_menu/main_menu.gd" id="1_p85wy"]
[ext_resource type="Script" path="res://resources/menus/pause_menu/settings.gd" id="2_2gm26"]
[ext_resource type="Script" path="res://resources/menus/pause_menu/load_save.gd" id="3_4nf1f"]
[ext_resource type="Texture2D" uid="uid://cqc75vdne05pg" path="res://BigMode/background/bg2-4.png" id="3_8r64t"]
[ext_resource type="Texture2D" uid="uid://jaxexeo5lod4" path="res://BigMode/background/bg2-1.png" id="4_adsdr"]
[ext_resource type="SpriteFrames" uid="uid://d4h7jc5kdynux" path="res://BigMode/PlayerBig/player_BIGSprites.tres" id="5_nysbk"]
[ext_resource type="Script" path="res://resources/menus/pause_menu/AnimatedSprite2D.gd" id="6_jlvvf"]
[ext_resource type="Texture2D" uid="uid://8iqgsv7vorxj" path="res://SmallMode/PlayerSmall/sprites/chibi_1.png" id="6_xhmjy"]
[ext_resource type="Script" path="res://resources/menus/pause_menu/Chibi1.gd" id="8_p4tol"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ggf3x"]
shader = ExtResource("1_fnc0l")
shader_parameter/blur = 1.0
shader_parameter/brightness = 0.9

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ggca"]
radius = 120.0
height = 654.286

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sn2j7"]
radius = 56.0
height = 171.714

[sub_resource type="Animation" id="Animation_ni0xg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bg2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pcaq2"]
resource_name = "pause"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.5, 2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.85]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bg2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0145m"]
resource_name = "resume"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.85, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bg2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jv63s"]
_data = {
"RESET": SubResource("Animation_ni0xg"),
"pause": SubResource("Animation_pcaq2"),
"resume": SubResource("Animation_0145m")
}

[node name="MainMenu" type="ColorRect"]
process_mode = 3
top_level = true
z_index = 4
material = SubResource("ShaderMaterial_ggf3x")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_p85wy")

[node name="bg2" type="Node2D" parent="."]

[node name="Bg2-4" type="Sprite2D" parent="bg2"]
position = Vector2(664, -319)
scale = Vector2(0.739583, 1.92222)
texture = ExtResource("3_8r64t")

[node name="Bg2-1" type="Sprite2D" parent="bg2"]
position = Vector2(636, 373)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_adsdr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="bg2"]
position = Vector2(219, 460)
scale = Vector2(0.7, 0.7)
sprite_frames = ExtResource("5_nysbk")
offset = Vector2(17, -67)
script = ExtResource("6_jlvvf")

[node name="Area2D" type="Area2D" parent="bg2/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bg2/AnimatedSprite2D/Area2D"]
position = Vector2(10, -32.8571)
shape = SubResource("CapsuleShape2D_2ggca")

[node name="RichTextLabel" type="RichTextLabel" parent="bg2"]
offset_left = 385.0
offset_top = 88.0
offset_right = 641.0
offset_bottom = 149.0
scale = Vector2(2, 2)
theme_override_colors/default_color = Color(1, 0.819608, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/shadow_outline_size = 6
theme_override_constants/outline_size = 8
bbcode_enabled = true
text = "[shake rate=10.0 level=5 connected=1]
             Little Stitches"

[node name="Chibi1" type="Sprite2D" parent="bg2"]
position = Vector2(1114, 525)
texture = ExtResource("6_xhmjy")
flip_h = true
script = ExtResource("8_p4tol")

[node name="Area2D" type="Area2D" parent="bg2/Chibi1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bg2/Chibi1/Area2D"]
position = Vector2(32, 36)
shape = SubResource("CapsuleShape2D_sn2j7")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="menu_splits_hbox" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="settings" type="PanelContainer" parent="CenterContainer/menu_splits_hbox"]
visible = false
layout_mode = 2
script = ExtResource("2_2gm26")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/menu_splits_hbox/settings"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="settings_hbox" type="VBoxContainer" parent="CenterContainer/menu_splits_hbox/settings/MarginContainer"]
layout_mode = 2

[node name="settings_label" type="Label" parent="CenterContainer/menu_splits_hbox/settings/MarginContainer/settings_hbox"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/menu_splits_hbox/settings/MarginContainer/settings_hbox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/menu_splits_hbox/settings/MarginContainer/settings_hbox"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="volume_slider" type="HSlider" parent="CenterContainer/menu_splits_hbox/settings/MarginContainer/settings_hbox"]
layout_mode = 2
min_value = -30.0
max_value = 20.0
editable = false

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/menu_splits_hbox/settings/MarginContainer/settings_hbox"]
layout_mode = 2

[node name="Label2" type="Label" parent="CenterContainer/menu_splits_hbox/settings/MarginContainer/settings_hbox"]
layout_mode = 2
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfxvol_slider" type="HSlider" parent="CenterContainer/menu_splits_hbox/settings/MarginContainer/settings_hbox"]
layout_mode = 2
min_value = -20.0
max_value = 15.0
editable = false

[node name="main_menu" type="PanelContainer" parent="CenterContainer/menu_splits_hbox"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/menu_splits_hbox/main_menu"]
layout_mode = 2

[node name="main_hbox" type="VBoxContainer" parent="CenterContainer/menu_splits_hbox/main_menu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/menu_splits_hbox/main_menu/MarginContainer/main_hbox"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/menu_splits_hbox/main_menu/MarginContainer/main_hbox"]
layout_mode = 2

[node name="resumeButton" type="Button" parent="CenterContainer/menu_splits_hbox/main_menu/MarginContainer/main_hbox"]
layout_mode = 2
text = "Play"

[node name="saveButton" type="Button" parent="CenterContainer/menu_splits_hbox/main_menu/MarginContainer/main_hbox"]
layout_mode = 2
text = "How To Play"

[node name="settingsButton" type="Button" parent="CenterContainer/menu_splits_hbox/main_menu/MarginContainer/main_hbox"]
layout_mode = 2
text = "Settings"

[node name="loadButton" type="Button" parent="CenterContainer/menu_splits_hbox/main_menu/MarginContainer/main_hbox"]
layout_mode = 2
text = "Credits"

[node name="quitButton" type="Button" parent="CenterContainer/menu_splits_hbox/main_menu/MarginContainer/main_hbox"]
layout_mode = 2
text = "Reset Game"

[node name="load_save" type="PanelContainer" parent="CenterContainer/menu_splits_hbox"]
visible = false
layout_mode = 2
script = ExtResource("3_4nf1f")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/menu_splits_hbox/load_save"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="ls_hbox" type="VBoxContainer" parent="CenterContainer/menu_splits_hbox/load_save/MarginContainer"]
layout_mode = 2

[node name="ls_label" type="Label" parent="CenterContainer/menu_splits_hbox/load_save/MarginContainer/ls_hbox"]
layout_mode = 2
text = "How to Play"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/menu_splits_hbox/load_save/MarginContainer/ls_hbox"]
layout_mode = 2

[node name="HowToPlay" type="Label" parent="CenterContainer/menu_splits_hbox/load_save/MarginContainer/ls_hbox"]
layout_mode = 2
text = "Move with 'WASD' or 'Arrows'
Hold 'Left Click' or 'Space'

Encircle items, complete orders
Complex shapes may not work

You'll switch to a Big Mode
Where you do poses
with 'WASD' or 'ARROWS'


"
horizontal_alignment = 1

[node name="Credits" type="Label" parent="CenterContainer/menu_splits_hbox/load_save/MarginContainer/ls_hbox"]
visible = false
layout_mode = 2
text = "Game Made by KobeMano
Art was done by Kor
links in itch description"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jv63s")
}

[connection signal="mouse_entered" from="bg2/AnimatedSprite2D/Area2D" to="bg2/AnimatedSprite2D" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="bg2/AnimatedSprite2D/Area2D" to="bg2/AnimatedSprite2D" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="bg2/Chibi1/Area2D" to="bg2/Chibi1" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="bg2/Chibi1/Area2D" to="bg2/Chibi1" method="_on_area_2d_mouse_exited"]
[connection signal="drag_ended" from="CenterContainer/menu_splits_hbox/settings/MarginContainer/settings_hbox/volume_slider" to="CenterContainer/menu_splits_hbox/settings" method="_on_volume_slider_drag_ended"]
[connection signal="drag_ended" from="CenterContainer/menu_splits_hbox/settings/MarginContainer/settings_hbox/sfxvol_slider" to="CenterContainer/menu_splits_hbox/settings" method="_on_sfxvol_slider_drag_ended"]
[connection signal="pressed" from="CenterContainer/menu_splits_hbox/main_menu/MarginContainer/main_hbox/saveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="CenterContainer/menu_splits_hbox/main_menu/MarginContainer/main_hbox/settingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/menu_splits_hbox/main_menu/MarginContainer/main_hbox/loadButton" to="." method="_on_load_button_pressed"]
